--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse text-center me-4" id="navmenu">
+        <div class="collapse navbar-collapse me-4" id="navmenu">
           <ul class="navbar-nav ms-auto navposition">
-            <li class="nav-item mx-lg-3">
+            <li class="nav-item d-inline-flex justify-content-center mx-lg-3">
               <a href="#footer" class="nav-link">Contact</a>
             </li>
-            <li class="nav-item mx-lg-3">
+            <li class="nav-item d-inline-flex justify-content-center mx-lg-3">
               <a href="#pricing" class="nav-link">Pricing</a>
             </li>
-            <li class="nav-item mx-lg-3">
+            <li class="nav-item d-inline-flex justify-content-center mx-lg-3">
               <a href="#cta" class="nav-link">Download</a>
             </li>
           </ul>
@@ -47,7 +47,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid mt-5">
+    <div class="container-fluid mt-lg-5 mt-4">
       <div class="row text-center text-md-start text-light">
         <div class="col-md mt-1">
           <h1 class="titlefontsm">Meet dog next door.</h1>
